# ProgPraktikum

./: CMakeLists.txt  README.md  driven_cavity.cpp  driven_cavity.h  visualize.py
Exercise Sheet 3/: CG_small_main.cpp  CMakeLists.txt  CsrMatrixClass.cpp  CsrMatrixClass.h  Exercise Sheet 3.sln  Exercise Sheet 3.vcxproj  Exercise Sheet 3.vcxproj.filters  Splines.cpp  Splines.h  VectorClass.cpp  VectorClass.h  filehandling.cpp  filehandling.h  gs_small_main.cpp  mat_vec_mult_main.cpp  matfile.txt  plotvals.py  testing.cpp  vecfile.txt  vector_multipl_main.cpp
Exercise Sheet 4/: Algebra-Matrix.h  Answers.txt  CsrMatrixClass.h  Exercise Sheet 4.sln  Exercise Sheet 4.vcxproj  Exercise Sheet 4.vcxproj.filters  SplineClass.h  VectorClass.h  matrixfile.txt  plotvals.py  splinefile1.txt  testing.cpp  vectorfile.txt
Exercise Sheet 5/: Exercise_32.py  driven_cavity.py  examplefile.txt  param.txt  testing.py  visualize.py
Exercise Sheet 5/Driven Cavity Problem/: Driven Cavity Problem.sln  Driven Cavity Problem.vcxproj  Driven Cavity Problem.vcxproj.filters  dc_output_001  driven_cavity.cpp  driven_cavity.h  driven_cavity.py  param.txt  testing.cpp  visualize.py
Exercise Sheet 6/Paralelization/: CMakeLists.txt  Paralelization.sln  Paralelization.vcxproj  Paralelization.vcxproj.filters  driven_cavity.h  driven_cavity_parallel.cpp  driven_cavity_parallel.h  testing.cpp  visualize.py
Exercise Sheet 6/Paralelization/MPI/Include/: mpi.f90  mpif.h  mspms.h
Exercise Sheet 6/Paralelization/MPI/Include/x64/: mpifptr.h
Exercise Sheet 6/Paralelization/MPI/Include/x86/: mpifptr.h
Exercise sheet 1/: Boundary_value_problem.py  Exercise_12.py  Gauss_Seidel.py  Multidimensional_Newton_method.py  Newton_Method.py  Numerical_Integration.py  Numerical_Integration_2.py  ODE.py  Taylor_Series.py  matrix_class.py  polynomial_class.py
Exercise sheet 2/: Exercise_13.py  Exercise_14.py  Exercise_15.py  Exercise_16.py  Exercise_17.py  Exercise_18.py  Exercise_21.c  Exercise_22.c
Joshua/: CMakeLists.txt  driven_cavity.cpp  driven_cavity.h  driven_cavity.py  visualize.py
