cmake_minimum_required(VERSION 3.10)
project(Aufgabe24 CXX)
if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
set(MY_PRIVATE_COMPILE_OPTIONS "/W4" "/permissive-")
else()
set(MY_PRIVATE_COMPILE_OPTIONS "-Wall" "-Wextra" "-pedantic")
endif()
add_library(myClasses CsrMatrixClass.cpp VectorClass.cpp)
target_compile_options(myClasses PRIVATE ${MY_PRIVATE_COMPILE_OPTIONS})
add_executable(gs_small gs_small_main.cpp)
add_executable(vector_multipl vector_multipl_main.cpp)
add_executable(mat_vec_mult mat_vec_mult_main.cpp)
add_executable(testing testing.cpp)
target_compile_options(gs_small PRIVATE ${MY_PRIVATE_COMPILE_OPTIONS})
target_compile_options(vector_multipl PRIVATE ${MY_PRIVATE_COMPILE_OPTIONS})
target_compile_options(mat_vec_mult PRIVATE ${MY_PRIVATE_COMPILE_OPTIONS})
target_compile_options(testing PRIVATE ${MY_PRIVATE_COMPILE_OPTIONS})
target_link_libraries(gs_small myClasses)
target_link_libraries(vector_multipl myClasses)
target_link_libraries(mat_vec_mult myClasses)
target_link_libraries(testing myClasses)
if (UNIX)
target_link_libraries(gs_small m)
target_link_libraries(vector_multipl m)
target_link_libraries(mat_vec_mult m)
target_link_libraries(testing m)
endif()