cmake_minimum_required(VERSION 3.10)
project(Driven_Cavity CXX)
if("${CMAKE_C_COMPILER_ID}" STREQUAL "MSVC") 
set(MY_PRIVATE_COMPILE_OPTIONS "/W4" "/permissive-")
else()
set(MY_PRIVATE_COMPILE_OPTIONS "-Wall" "-Wextra" "-pedantic")
endif()
add_executable(driven_cavity driven_cavity.cpp)
target_compile_options(driven_cavity PRIVATE ${MY_PRIVATE_COMPILE_OPTIONS})
if(UNIX)
endif()
