cmake_minimum_required(VERSION 3.10)
project(Aufgabe24 CXX)
if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
set(MY_PRIVATE_COMPILE_OPTIONS "/W4" "/permissive-")
else()
set(MY_PRIVATE_COMPILE_OPTIONS "-Wall" "-Wextra" "-pedantic")
endif()
add_executable(testing testing.cpp)
find_package(MPI REQUIRED)
target_link_libraries(testing MPI::MPI_CXX)
target_compile_options(testing PRIVATE ${MY_PRIVATE_COMPILE_OPTIONS})
target_link_libraries(gs_small myClasses)
if (UNIX)
target_link_libraries(gs_small m)
endif()